# SkillMatch

./: .gitignore  LICENSE  README.md
ai-module/: api_server.py  data_extraction.py  llm_handler.py  main.py  pyproject.toml  requirements  requirements.txt  scoring_logic.py
ai-module/src/: data_cleaner.py  data_extraction.py  llm_handler.py  main_module.py  scoring_logic.py
ai-module/testing_files/: descriere_job.txt
web-app/: pom.xml
web-app/src/main/java/com/licenta/skillmatch/: WebAppApplication.java
web-app/src/main/java/com/licenta/skillmatch/config/: WebConfig.java
web-app/src/main/java/com/licenta/skillmatch/controller/: AIController.java  ApplicationController.java  JobPostController.java  UserController.java
web-app/src/main/java/com/licenta/skillmatch/dto/: BookedInterviewDto.java  CandidateJobScoreDto.java  CandidateProfileDto.java  CandidateScoreStatsDto.java  DashboardInterviewDto.java  EmployerJobScoreStatsDto.java  EmployerProfileDto.java  JobApplicantDto.java  JobApplicationDto.java  JobEditDto.java  JobPostDto.java  RegisterDto.java  UserEditDto.java  UserListDto.java
web-app/src/main/java/com/licenta/skillmatch/entity/: BookedInterview.java  Candidate.java  CandidateJobScore.java  Employer.java  JobApplication.java  JobPost.java  PastInterview.java  User.java  UserGroup.java
web-app/src/main/java/com/licenta/skillmatch/repository/: BookedInterviewRepository.java  CandidateJobScoreRepository.java  CandidateRepository.java  EmployerRepository.java  JobApplicationRepository.java  JobPostRepository.java  PastInterviewRepository.java  UserGroupRepository.java  UserRepository.java
web-app/src/main/java/com/licenta/skillmatch/security/: SecurityConfig.java
web-app/src/main/java/com/licenta/skillmatch/service/: AiIntegrationService.java  CustomUserDetailsService.java  JobApplicationService.java  JobPostService.java  UserService.java
web-app/src/main/resources/: application.properties
web-app/src/main/resources/static/css/: style.css
web-app/src/main/resources/templates/: about.html  add-job.html  add-user.html  applications.html  dashboard.html  edit-job.html  edit-user.html  index.html  job-applicants.html  job-details.html  jobs.html  login.html  profile.html  user-edit.html  users.html
web-app/src/main/resources/templates/fragments/: footer.html  navbar.html  score-badge.html
web-app/src/test/java/com/licenta/skillmatch/: WebAppApplicationTests.java
