[project]
name = "ai-module"
version = "0.1.0"
description = "AI module for matching candidates with jobs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.12.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "cryptography==47.0.0",
    "defusedxml==0.7.1",
    "dill==0.4.0",
    "docling==2.65.0",
    "docling-core==2.55.0",
    "docling-ibm-models==3.10.3",
    "docling-parse==4.7.2",
    "et-xmlfile==2.0.0",
    "faker==38.2.0",
    "fastapi==0.135.1",
    "filelock==3.20.1",
    "filetype==1.2.0",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "hypothesis==6.152.4",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonlines==4.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "latex2mathml==3.78.1",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "marko==2.2.1",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpire==2.10.2",
    "mpmath==1.3.0",
    "multiprocess==0.70.18",
    "networkx==3.6.1",
    "numpy==2.3.5",
    "ollama==0.6.1",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-stubs==3.0.0.260204",
    "pdf2image==1.17.0",
    "pdfminer-six==20251230",
    "pdfplumber==0.11.9",
    "pillow==11.3.0",
    "pip==25.3",
    "pluggy==1.6.0",
    "polyfactory==3.1.0",
    "psutil==7.1.3",
    "pyclipper==1.4.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pylatexenc==2.10",
    "pypdfium2==4.30.0",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-pptx==1.0.2",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.3",
    "rapidocr==3.4.3",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rtree==1.4.1",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "semchunk==2.2.2",
    "sentence-transformers==5.2.0",
    "setuptools==80.9.0",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "tree-sitter==0.25.2",
    "tree-sitter-c==0.24.1",
    "tree-sitter-java==0.23.5",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-python==0.25.0",
    "tree-sitter-typescript==0.23.2",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "uv==0.9.17",
    "uvicorn==0.41.0",
    "websockets==16.0",
    "xlsxwriter==3.2.9",
]
